--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,29 @@
-version: '3.8'
 services:
   frontend:
     build:
-      context: .
+      context: ./client
       dockerfile: Dockerfile
     ports:
-      - "3000:80"
-    depends_on:
-      - graphql
+      - "5173:5173"
+    volumes:
+      - ./client:/app
+      - /app/node_modules
+#    depends_on:
+#      - graphql
 
   graphql:
     build:
-      context: .
-      dockerfile: Dockerfile.server
+      context: ./server
+      dockerfile: Dockerfile
     ports:
       - "4000:4000"
-    depends_on:
-      - db
     environment:
       DATABASE_URL: postgres://user:password@db:5432/mydatabase
+    volumes:
+      - ./server:/app
+      - /app/node_modules
+    depends_on:
+      - db
 
   db:
     image: postgres:13
