--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "ts-node src/server.ts",
-    "typeorm": "ts-node node_modules/typeorm/cli.js -d src/data-source.ts"
+    "typeorm": "ts-node node_modules/typeorm/cli.js -d src/data-source.ts",
+    "seed": "ts-node src/seeds/seedPosts.ts"
   },
   "dependencies": {
     "@graphql-tools/merge": "^9.0.4",
-    "apollo-server-express": "^2.19.2",
+    "apollo-server-express": "^3.13.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "pg": "^8.6.0",
@@ -17,6 +18,7 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
