--- a/server/package.json
+++ b/server/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "@graphql-tools/merge": "^9.0.4",
     "apollo-server-express": "^3.13.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
+    "lexorank": "^1.0.5",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@types/node": "^22.1.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
