tweak: Rename directories

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     environment:
       DATABASE_URL: postgres://user:password@db:5432/mydatabase
     volumes:
-      - ./frontend:/app
+      - ./backend:/app
     depends_on:
       - db
 
