--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
+    "build": "tsc",
     "start": "node dist/server.js",
     "dev": "ts-node src/server.ts",
     "typeorm": "ts-node node_modules/typeorm/cli.js -d src/data-source.ts",
