feat: Deployment config

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,10 +3,12 @@
     "target": "ES6",
     "module": "commonjs",
     "rootDir": "./src",
+    "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
