--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,12 @@ services:
     build:
       context: frontend
       dockerfile: Dockerfile
+      target: development
     ports:
       - "5173:5173"
+    environment:
+      VITE_GRAPHQL_URL: 'http://localhost:4000/graphql'
+      NODE_ENV: development
     volumes:
       - ./frontend:/app
     depends_on:
@@ -14,10 +18,13 @@ services:
     build:
       context: backend
       dockerfile: Dockerfile
+      target: development
     ports:
       - "4000:4000"
     environment:
       DATABASE_URL: postgres://user:password@db:5432/mydatabase
+      GRAPHQL_PORT: "4000"
+      CORS_ORIGIN: http://localhost:5173
     volumes:
       - ./backend:/app
     depends_on:
