--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,19 +7,22 @@
     "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve -s dist -l $PORT"
   },
   "dependencies": {
     "@apollo/client": "^3.11.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@hello-pangea/dnd": "^16.6.0",
+    "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "graphql": "^16.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/node": "^22.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
