--- a/backend/package.json
+++ b/backend/package.json
@@ -5,20 +5,25 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "ts-node src/server.ts",
+    "dev": "ts-node-dev src/server.ts",
     "typeorm": "ts-node node_modules/typeorm/cli.js -d src/data-source.ts",
     "seed": "ts-node src/seeds/seedPosts.ts"
   },
   "dependencies": {
     "@graphql-tools/merge": "^9.0.4",
+    "@types/ws": "^8.5.12",
     "apollo-server-express": "^3.13.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "graphql": "^15.5.0",
+    "graphql": "^16.9.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.16.0",
     "lexorank": "^1.0.5",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.20"
+    "subscriptions-transport-ws": "^0.11.0",
+    "typeorm": "^0.3.20",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
