--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "5173:5173"
     environment:
       VITE_GRAPHQL_URL: 'http://localhost:4000/graphql'
+      VITE_GRAPHQL_SUBSCRIPTION_URL: 'ws://localhost:4000/graphql'
       NODE_ENV: development
     volumes:
       - ./frontend:/app
