--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,11 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "graphql": "^16.9.0",
+    "graphql-ws": "^5.16.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "subscriptions-transport-ws": "^0.11.0"
   },
   "devDependencies": {
     "@types/node": "^22.1.0",
