--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "serve -s dist -l $PORT"
+    "start": "vite --host --port $PORT"
   },
   "dependencies": {
     "@apollo/client": "^3.11.2",
